# mitsoapi

./: .editorconfig  CMakeLists.txt
example/: CMakeLists.txt
example/include/: fetch_and_parse_html.h
example/src/: fetch_and_parse_html.c  main.c
include/mitsoapi/: error.h  mitsoapi.h
include/mitsoapi/core/http/fetch/: fetch_and_parse_html.h
src/: mitsoapi.c  mitsoapi_structure.c  mitsoapi_structure.h
src/core/http/fetch/: fetch_and_parse_html.c
